# Illinois_GRMHD_radiation

./: CONTRIBUTORS  Makefile  README.md  ThornList  ThornList-goodbackup-noGSL  ThornList-mhd  ThornList-origgood  ThornList-vacuum  ThornList~  VERSION.txt  bw-compile.py  cleanconfig  compile  link  make_config-ancient_astro_BH_CLUSTER  make_config-bw-openmp-gnu  make_config-bw-openmp-gnuII  make_config-bw-openmp-intel  make_config-bw-openmp-intel_OLD  make_config-bw-openmp-intel~  make_config-frontera  make_config-kraken-openmpi-openmp-pgi  make_config-lonestar  make_config-mmcluster  make_config-qb11-mvapich-openmp  make_config-ranger-mvapich-openmp-intel  make_config-ranger-mvapich-openmp-pgi  make_config-stampede2  make_config-stampede_impi  make_config-stampede_zach  make_config-steele-openmpi-openmp-pgi  make_config_pleiades  make_config_pleiades~  makescript  removetildefiles  sal  tmp
arrangements/ABE/: GenFD_decl_set_varCPP.h  GenFD_decl_varF90.h  GenFD_set_varF90.h  GenericFD.h  a.out
arrangements/ABE/Dissipation/: configuration.ccl  interface.ccl  param.ccl  schedule.ccl
arrangements/ABE/Leakge/: configuration.ccl  configuration.ccl~  interface.ccl  param.ccl  schedule.ccl  schedule.ccl~
arrangements/ABE/OS_collapse/: #interface.ccl#  configuration.ccl  interface.ccl  interface.ccl~  param.ccl  schedule.ccl
arrangements/ABE/OS_toy/: README  configuration.ccl  interface.ccl_old  interface.ccl~  param.ccl  param.ccl~  schedule.ccl  schedule.ccl~
arrangements/ABE/OS_toy_new/: #schedule.ccl#  interface.ccl  param.ccl  param.ccl~  schedule.ccl  schedule.ccl~
arrangements/ABE/SHIFT/: #param.ccl#  .#param.ccl  .#schedule.ccl  configuration.ccl  interface.ccl  schedule.ccl
arrangements/ABE/SphericalSurface/: interface.ccl  param.ccl  schedule.ccl
arrangements/ABE/StaticConformal/: interface.ccl  param.ccl  schedule.ccl
arrangements/ABE/TwoPunctures/: configuration.ccl  interface.ccl  param.ccl  schedule.ccl
arrangements/ABE/TwoPuncturesAEI/: configuration.ccl  interface.ccl  param.ccl  schedule.ccl
arrangements/ABE/ahfinderdirect/: interface.ccl  param.ccl  schedule.ccl
arrangements/ABE/ang_freq_ofBfield/: configuration.ccl  interface.ccl  param.ccl  schedule.ccl
arrangements/ABE/bbh_bondi/: configuration.ccl  interface.ccl  param.ccl  schedule.ccl
arrangements/ABE/bbh_cookpfeiffer_rot/: configuration.ccl  interface.ccl  param.ccl  schedule.ccl
arrangements/ABE/bbhlorene/: configuration.ccl  interface.ccl  param.ccl  schedule.ccl
arrangements/ABE/bhns/: configuration.ccl  interface.ccl  interface.ccl~  param.ccl  param.ccl~  schedule.ccl  schedule.ccl~
configs/giggle/: config-info
lib/make/: CCTK_Functions.sh  aclocal.m4  configure.in  configure.pl  force-rebuild  force-reconfigure  make.configuration.orig  make.configuration.rej  make.subdir  make.thornlib  new_thorn.pl  patch0
lib/make/CVS/: Entries
lib/make/extras/BLAS/: setup.sh
lib/make/extras/BLAS/CVS/: Entries  Repository
lib/make/extras/DEBUG/CVS/: Repository
lib/make/extras/FFTW/CVS/: Entries  Repository
lib/make/extras/GRACE/CVS/: Entries  Root
lib/make/extras/HDF5/CVS/: Entries
lib/make/extras/LAPACK/CVS/: Entries  Repository
lib/make/extras/LORENE/CVS/: Entries  Repository
lib/make/extras/MPI/: HPVM  LAM  MPICH  MPIPro  NATIVE  OpenMPI  PACX  WMPI
lib/make/extras/MPI/CVS/: Entries
lib/make/extras/PETSC/CVS/: Entries  Repository
lib/make/extras/PTHREADS/CVS/: Entries
lib/make/known-architectures/: aix  aix4.2.0.0  aix4.3.0.0  aix4.3.2.0  aix4.3.3.0  aix5.1.0.0  aix5.2.0.0  aix5.3.0.0  bgl  cygwin  darwin  darwin6.8  darwin7.2.0  darwin7.3.0  darwin7.4.0  darwin7.4.1  darwin7.5.0  darwin7.7.0  darwin7.8.0  darwin7.9.0  darwin8.1.0  darwin8.10.1  darwin8.10.3  darwin8.11.1  darwin8.2.0  darwin8.2.1  darwin8.3.0  darwin8.4.0  darwin8.5.0  darwin8.5.2  darwin8.6.1  darwin8.7.1  darwin8.8.1  darwin8.9.1  darwin9.2.0  darwin9.2.2  darwin9.3.0  darwin9.4.0  freebsd  freebsd4.9  (+50 more)
lib/make/known-architectures/CVS/: Entries
lib/make_old/: cctk_Config.h.in  configure  make.config.defn.in  make.config.deps.in  make.config.rules.in  setup_configuration.pl
lib/sbin/: CST  CSTUtils.pl  ConfigScriptParser.pl  ConfigurationParser.pl  CreateConfigurationBindings.pl  CreateFunctionBindings.pl  CreateImplementationBindings.pl  CreateParameterBindings.pl  CreateScheduleBindings.pl  GridFuncStuff.pl  Logger.pl  MakeUtils.pl  ProcessConfiguration.pl  ScheduleParser.pl  c_file_processor.pl  create_c_stuff.pl  create_fortran_stuff.pl  f_depend_modules.pl  f_file_processor.pl  interface_parser.pl  parameter_parser.pl  tsort
src/: datestamp.c  make.code.defn  param.ccl
src/IO/: FortranBindingsIO.c  IOMethods.c
src/comm/: CactusDefaultComm.c  CactusSync.c  Interp.c  OverloadComm.c  Reduction.c
src/include/: CommOverloadables.h  CommandLine.h  IOOverloadables.h  MainOverloadables.h  OverloadMacros.h  cGH.h  cctk.h  cctk_Complex.h  cctk_Constants.h  cctk_DebugDefines.h  cctk_Groups.h  cctk_GroupsOnGH.h  cctk_IOMethods.h  cctk_Loop.h  cctk_Misc.h  cctk_Schedule.h  cctk_Stagger.h  cctk_Timers.h  cctk_Types.h  cctk_WarnLevel.h  cctki_Groups.h  cctki_ScheduleBindings.h  cctki_Stagger.h  util_BinaryTree.h  util_Expression.h  util_Table.h  utili_Expression.h
src/main/: ActiveThorns.c  Banner.c  CactusDefaultEvolve.c  CactusDefaultInitialise.c  CactusDefaultMainLoopIndex.c  CactusDefaultShutdown.c  CallStartupFunctions.c  CommandLine.c  Complex.c  ConfigData.c  Coord.c  DebugDefines.c  DefaultTimers.c  Groups.c  GroupsOnGH.c  InitialiseCactus.c  InitialiseDataStructures.c  MainUtils.c  Parameters.c  ProcessCommandLine.c  ProcessEnvironment.c  ProcessParameterDatabase.c  ScheduleInterface.c  SetParams.c  SetupCache.c  ShutdownCactus.c  Stagger.c  Subsystems.c  Termination.c  WarnLevel.c  flesh.cc  make.code.defn  make.code.deps
src/schedule/: Schedule.h  ScheduleCreater.c  ScheduleSorter.c  ScheduleTraverse.c
src/util/: BinaryTree.c  Cache.c  CactusTimers.c  Expression.c  File.c  Misc.c  Network.c  ParseFile.c  SKBinTree.c  String.c  StringList.c  Table.c  make.code.defn
(+3041 files in other folders)
